[project]
name = "fall-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.12.0.88",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "ultralytics>=8.3.228",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "librosa>=0.11.0",
    "torchlibrosa>=0.1.0",
    "pyaudio>=0.2.14",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
